@@ -1,4 +1,5 @@
 5.1.7 -> 5.1.8:
+    - jbj: yarn: wire up rpmgiFini, eliminate rpmgiFree.
     - jbj: rpmtsi: use __FUNCTION__ rather than adding a 2nd arg everywhere.
     - jbj: pgpDig: fix: rpmioFreePoolItem() can return non-NULL, clear ts->dig.
     - jbj: rpmio: add --pgpdebug for pgpDig debugging.
